<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyUserActivity">

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/etVusername"
        android:hint="@string/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/etOTP"
        android:layout_below="@+id/etVusername"
        android:hint="@string/otp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="25dp"
        android:id="@+id/btnSubmit"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etOTP"
        />

</RelativeLayout>